--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-image: url("images/MMM Logo.png");
+    background-image: url("images/MMM Logo-Blue.png");
     background-size: cover;     /* makes the image fill the banner */
     background-position: center;
     padding: 60px 20px;         /* makes banner taller */
